# mono-memory-mcp

./: .gitignore  .mcp.json  CLAUDE_MD_TEMPLATE.md  LICENSE  README.md  install.sh  pyproject.toml  server.py  test_server.py
.claude-plugin/: marketplace.json  plugin.json
api-docs-template/: index.html  script.js  styles.css
scripts/: logs.sh  restart.sh  start.sh  stop.sh
skills/: setup.md
skills/api-docs/: SKILL.md
skills/mono-read/: SKILL.md
skills/mono-save/: SKILL.md
skills/mono-summary/: SKILL.md
skills/mono-update/: SKILL.md
skills/setup/: SKILL.md
