[project]
name = "mono-memory-mcp"
version = "0.1.0"
description = "A lightweight, self-hosted MCP server for persistent team/project memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "memory", "context", "team", "knowledge-base", "sqlite"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/potato-castle/mono-memory-mcp"
Repository = "https://github.com/potato-castle/mono-memory-mcp"
Issues = "https://github.com/potato-castle/mono-memory-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
